--- a/premanentmakeup.html
+++ b/premanentmakeup.html
@@ -239,6 +239,18 @@
                </div>
           </div>
         </section> 
+        <div class="breadcumb-wrp"> 
+            <div class="sub-breadc-cnt">
+               <ul class="ul1">
+                  <li><a href="mailto:contact@cossetworld.com"><i class="fa fa-envelope"></i> contact@cossetworld.com</a></li>
+                  <li>    <a href="Tel:8826057629"><i class="fa fa-phone"></i> +91 8826057629</a></li>
+               </ul>
+               <ul class="ul2">
+                   <li><a href="#">Home</a></li>
+                  <li class="page-active"> / <a href="#">Slimming</a></li>
+               </ul>
+           </div>
+          </div>
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Main-PrpHair-content MainPigment-content
      Main-premanent_wrp">
             <!-- Slim--Service --> 
