--- a/slimming.html
+++ b/slimming.html
@@ -246,7 +246,7 @@
           <div class="sub-breadc-cnt">
              <ul class="ul1">
                 <li><a href="mailto:contact@cossetworld.com"><i class="fa fa-envelope"></i> contact@cossetworld.com</a></li>
-                <li>    <a href="Tel:9832048033"><i class="fa fa-phone"></i> +91 98320-48033</a></li>
+                <li>    <a href="Tel:8826057629"><i class="fa fa-phone"></i> +91 8826057629</a></li>
              </ul>
              <ul class="ul2">
                  <li><a href="#">Home</a></li>
