--- a/filler.html
+++ b/filler.html
@@ -242,6 +242,18 @@
                </div>
           </div>
         </section> 
+        <div class="breadcumb-wrp"> 
+            <div class="sub-breadc-cnt">
+               <ul class="ul1">
+                  <li><a href="mailto:contact@cossetworld.com"><i class="fa fa-envelope"></i> contact@cossetworld.com</a></li>
+                  <li>    <a href="Tel:8826057629"><i class="fa fa-phone"></i> +91 8826057629</a></li>
+               </ul>
+               <ul class="ul2">
+                   <li><a href="#">Home</a></li>
+                  <li class="page-active"> / <a href="#">Slimming</a></li>
+               </ul>
+           </div>
+          </div>
     <div class="Main-content-Wrapper Main-Filler-content">
             <!-- Slim--Service --> 
             <section class="Slim_Service Filler-Service"   data-aos="fade-up"
