--- a/botox.html
+++ b/botox.html
@@ -373,13 +373,13 @@
                     <div class="Grid-item1 Grid-item_cmn01">
                         <div class="grid-hvr-content">
                             <div class="Hvr_cnt">
-                                <h2>Beauty</h2>
+                                <h2>permanent Makeup</h2>
                                 <p>Be Beautiful With Our Services</p>
                                 <a href="#" class="hvr-radial-out">View Explore</a>
                             </div>
                         </div>
                         <div class="bottom_Bar">
-                            <h2>Beauty</h2>
+                            <h2>permanent Makeup</h2>
                             <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
                         </div>
                     </div>
