--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
                             <div class="Child_drop2">
                                 <div class="sub-drop01 sub-cmn01">
                                     <ul>
-                                        <li class="list1 list-cmn01 list-active"><a href="slimming.html#Loss" class="listAnckr1">weight loss</a></li>
-                                        <li class="list2 list-cmn01"><a href="slimming.html#Gain">weight gain</a></li>
-                                        <li class="list3 list-cmn01"><a href="slimming.html#Body">BODY THERAPIES</a></li>
-                                        <li class="list4 list-cmn01"><a href="slimming.html#Spot">SPOT REDUCTION THERAPY</a></li>
-                                        <li class="list5 list-cmn01"><a href="slimming.html#Skin">SKIN FIRMING</a></li>
-                                        <li class="list6 list-cmn01"><a href="slimming.html#Specialized">SPECIALISED THERAPIES</a></li>
-                                        <li class="list7 list-cmn01"><a href="slimming.html#Wellness">WELLNESS TREATMENTS</a></li>
-                                        <li class="list8 list-cmn01"><a href="slimming.html#Energy">BIO ENERGY THERAPY </a></li>
-                                        <li class="list9 list-cmn01"><a href="slimming.html#VTRON">VTRON CTS TREATMENTS</a></li>
-                                        <li class="list10 list-cmn01"><a href="slimming.html">BUST TREATMENTS   </a></li>
-                                        <li class="list11 list-cmn01"><a href="slimming.html">FIGURE CORRECTION TREATMENT   </a></li>
+                                        <li class="list1 list-cmn01 list-active"><a href="javascript:void(0)" class="listAnckr1">weight loss</a></li>
+                                        <li class="list2 list-cmn01"><a href="javascript:void(0)">weight gain</a></li>
+                                        <li class="list3 list-cmn01"><a href="javascript:void(0)">BODY THERAPIES</a></li>
+                                        <li class="list4 list-cmn01"><a href="javascript:void(0)">SPOT REDUCTION THERAPY</a></li>
+                                        <li class="list5 list-cmn01"><a href="javascript:void(0)">SKIN FIRMING</a></li>
+                                        <li class="list6 list-cmn01"><a href="javascript:void(0)">SPECIALISED THERAPIES</a></li>
+                                        <li class="list7 list-cmn01"><a href="javascript:void(0)">WELLNESS TREATMENTS</a></li>
+                                        <li class="list8 list-cmn01"><a href="javascript:void(0)">BIO ENERGY THERAPY </a></li>
+                                        <li class="list9 list-cmn01"><a href="javascript:void(0)">VTRON CTS TREATMENTS</a></li>
+                                        <li class="list10 list-cmn01"><a href="javascript:void(0)">BUST TREATMENTS   </a></li>
+                                        <li class="list11 list-cmn01"><a href="javascript:void(0)">FIGURE CORRECTION TREATMENT   </a></li>
                                     </ul>
                                 </div>
                                 <div class="sub-drop02 sub-cmn01">
@@ -107,14 +107,14 @@
                                     <div class="Sub_Hvr_wrp4 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="slimming.html#tummy">Tummy Trim Therapy</a></li>
-                                                <li><a href="slimming.html#tummy">Arm Trim Therapy</a></li> 
-                                                <li><a href="slimming.html#tummy">Hip Trim Therapy</a></li>
-                                                <li><a href="slimming.html#tummy">Thigh Trim Therapy</a></li> 
-                                                <li><a href="slimming.html#tummy">Chest Trim Therapy</a></li>
-                                                <li><a href="slimming.html#tummy">Side Trim Therapy</a></li> 
-                                                <li><a href="slimming.html#tummy">Integrative Massage Therapy</a></li> 
-                                                <li><a href="slimming.html#tummy">G-5</a></li>
+                                                <li><a href="slimming.html#Spot">Tummy Trim Therapy</a></li>
+                                                <li><a href="slimming.html#Spot">Arm Trim Therapy</a></li> 
+                                                <li><a href="slimming.html#Spot">Hip Trim Therapy</a></li>
+                                                <li><a href="slimming.html#Spot">Thigh Trim Therapy</a></li> 
+                                                <li><a href="slimming.html#Spot">Chest Trim Therapy</a></li>
+                                                <li><a href="slimming.html#Spot">Side Trim Therapy</a></li> 
+                                                <li><a href="slimming.html#Spot">Integrative Massage Therapy</a></li> 
+                                                <li><a href="slimming.html#Spot">G-5</a></li>
                                             </ul> 
                                         </ul>
                                     </div>
@@ -222,11 +222,11 @@
                             </a></li>
                               <!-- drop--5th -->
                               <ul class="drop_down drop5">
-                                <li class="list"><a href="#">Pink Lips</a></li>
-                                <li class="list"><a href="#">permanent eyebrow</a></li>
-                                <li class="list"><a href="#">permanent Eyeliner</a></li>
+                                <li class="list"><a href="premanentmakeup.html#PinkLips">Pink Lips</a></li>
+                                <li class="list"><a href="premanentmakeup.html#Peyebrow">permanent eyebrow</a></li>
+                                <li class="list"><a href="premanentmakeup.html#PEyelashes">permanent Eyeliner</a></li>
                                 <!-- <li class="list"><a href="#">permanent lip linear</a></li>  -->
-                                <li class="list"><a href="#">hair bleeding</a></li> 
+                                <li class="list"><a href="premanentmakeup.html#PBleeding">hair bleeding</a></li> 
                             </ul>
                            <!-- end--here -->
                         </ul>
