--- a/slimming.html
+++ b/slimming.html
@@ -49,10 +49,10 @@
                             </a></li>
                                  <!--drop--1st-->
                                  <ul class="drop_down drop1">
-                                    <li class="list"><a href="#">Skin Treatment</a></li>
-                                    <li class="list"><a href="#">laser Treatment</a></li>
-                                    <li class="list"><a href="#">body Treatment</a></li>
-                                    <li class="list"><a href="#">cosmodermat Treatment</a></li> 
+                                    <li class="list"><a href="skintreatment.html">Skin Treatment</a></li>
+                                    <li class="list"><a href="lasertreatment.html">laser Treatment</a></li>
+                                    <li class="list"><a href="bodytreatment.html">body Treatment</a></li>
+                                    <li class="list"><a href="cosmo.html">cosmedermat Treatments</a></li> 
                                 </ul>
                                <!-- end--here -->
                             <li class="slimming">
@@ -66,100 +66,117 @@
                             <div class="Child_drop2">
                                 <div class="sub-drop01 sub-cmn01">
                                     <ul>
-                                        <li class="list1 list-cmn01 list-active"><a  href="#">weight loss</a></li>
-                                        <li class="list2 list-cmn01"><a href="#">weight gain</a></li>
-                                        <li class="list3 list-cmn01"><a href="#">BODY THERAPIES</a></li>
-                                        <li class="list4 list-cmn01"><a href="#">SPOT REDUCTION THERAPY</a></li>
-                                        <li class="list5 list-cmn01"><a href="#">SKIN FIRMING</a></li>
-                                        <li class="list6 list-cmn01"><a href="#">SPECIALISED THERAPIES</a></li>
-                                        <li class="list7 list-cmn01"><a href="#">WELLNESS TREATMENTS</a></li>
-                                        <li class="list8 list-cmn01"><a href="#">BIO ENEROYTHERAP</a></li>
-                                        <li class="list9 list-cmn01"><a href="#">VTRON CTS TREATMENTS</a></li>
+                                        <li class="list1 list-cmn01 list-active"><a href="javascript:void(0)" class="listAnckr1">weight loss</a></li>
+                                        <li class="list2 list-cmn01"><a href="javascript:void(0)">weight gain</a></li>
+                                        <li class="list3 list-cmn01"><a href="javascript:void(0)">BODY THERAPIES</a></li>
+                                        <li class="list4 list-cmn01"><a href="javascript:void(0)">SPOT REDUCTION THERAPY</a></li>
+                                        <li class="list5 list-cmn01"><a href="javascript:void(0)">SKIN FIRMING</a></li>
+                                        <li class="list6 list-cmn01"><a href="javascript:void(0)">SPECIALISED THERAPIES</a></li>
+                                        <li class="list7 list-cmn01"><a href="javascript:void(0)">WELLNESS TREATMENTS</a></li>
+                                        <li class="list8 list-cmn01"><a href="javascript:void(0)">BIO ENERGY THERAPY </a></li>
+                                        <li class="list9 list-cmn01"><a href="javascript:void(0)">VTRON CTS TREATMENTS</a></li>
+                                        <li class="list10 list-cmn01"><a href="javascript:void(0)">BUST TREATMENTS   </a></li>
+                                        <li class="list11 list-cmn01"><a href="javascript:void(0)">FIGURE CORRECTION TREATMENT   </a></li>
                                     </ul>
                                 </div>
                                 <div class="sub-drop02 sub-cmn01">
                                     <div class="Sub_Hvr_wrp1 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
-                                            <li><a href="#">1Kg - Weight Loss</a></li>
-                                            <li><a href="#">Lipofit - 12 </a></li> 
+                                            <li><a href="#1kg">1Kg - Weight Loss</a></li>
+                                            <li><a href="#lipo">Lipofit - 12 </a></li> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp2 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
-                                            <li><a href="#">1Kg - Weight gain</a></li>
-                                            <li><a href="#">duo therapy</a></li> 
+                                            <li><a href="#1kgGain">1Kg - Weight gain</a></li>
+                                            <li><a href="#Duo">duo therapy</a></li> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp3 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
-                                            <li><a href="#">Full Body Therapy</a></li>
+                                            <li><a href="#FullBody">Full Body Therapy</a></li>
                                             <li><a href="#">Premium Body Therapy</a></li> 
-                                            <li><a href="#">Herbal Anti - Cellulite Therapy</a></li> 
-                                            <li><a href="#">Manual Lymphatic Drainage Therapy</a></li> 
-                                            <li><a href="#">Bone Strengthening Therapy</a></li> 
+                                            <li><a href="#Herbal">Herbal Anti - Cellulite Therapy</a></li> 
+                                            <li><a href="#Manual">Manual Lymphatic Drainage Therapy</a></li> 
+                                            <li><a href="#Bone">Bone Strengthening Therapy</a></li> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp4 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Tummy Trim Therapy</a></li>
-                                                <li><a href="#">Arm Trim Therapy</a></li> 
-                                                <li><a href="#">Hip Trim Therapy</a></li>
-                                                <li><a href="#">Thigh Trim Therapy</a></li> 
-                                                <li><a href="#">Chest Trim Therapy</a></li>
-                                                <li><a href="#">Side Trim Therapy</a></li> 
-                                                <li><a href="#">Integrative Massage Therapy</a></li> 
-                                                <li><a href="#">G-5</a></li>
+                                                <li><a href="#tummy">Tummy Trim Therapy</a></li>
+                                                <li><a href="#tummy">Arm Trim Therapy</a></li> 
+                                                <li><a href="#tummy">Hip Trim Therapy</a></li>
+                                                <li><a href="#tummy">Thigh Trim Therapy</a></li> 
+                                                <li><a href="#tummy">Chest Trim Therapy</a></li>
+                                                <li><a href="#tummy">Side Trim Therapy</a></li> 
+                                                <li><a href="#tummy">Integrative Massage Therapy</a></li> 
+                                                <li><a href="#tummy">G-5</a></li>
                                             </ul> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp5 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Body Firming / Contouring</a></li>  
+                                                <li><a href="#BFarming">Body Firming / Contouring</a></li>  
                                             </ul> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp6 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Turboslim</a></li>
+                                                <li><a href="#Turboslim">Turboslim</a></li>
                                                 <li><a href="#">Waist & Tummy Trim Treatment</a></li>
-                                                <li><a href="#">Arm Trim Treatment</a></li>
-                                                <li><a href="#">Hip Trim Treatment</a></li> 
-                                                <li><a href="#">Thigh Trim Treatment</a></li>
-                                                <li><a href="#">Get Therapy</a></li> 
-                                                <li><a href="#">Ultraslim / Ultratrim</a></li>
-                                                <li><a href="#">SlimLite / Trimlite</a></li>  
+                                                <li><a href="#ArmTrt">Arm Trim Treatment</a></li>
+                                                <li><a href="#HipTrim">Hip Trim Treatment</a></li> 
+                                                <li><a href="#ThighTrim">Thigh Trim Treatment</a></li>
+                                                <li><a href="#GelThrpy">Gel Therapy</a></li> 
+                                                <li><a href="#Ultraslim">Ultraslim / Ultratrim</a></li>
+                                                <li><a href="#Slitmlite">SlimLite / Trimlite</a></li>  
                                             </ul> 
                                         </ul>
                                     </div> 
                                     <div class="Sub_Hvr_wrp7 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Slimming Cum Core Muscle Strengthening Then</a></li>
-                                                <li><a href="#">Neuromuscular Therapy</a></li>
-                                                <li><a href="#">Analgesic T herapy</a></li>   
+                                                <li><a href="#SlimmingMuscles">Slimming Cum Core Muscle Strengthening Then</a></li>
+                                                <li><a href="#Neuromuscular">Neuromuscular Therapy</a></li>
+                                                <li><a href="#Analgesic">Analgesic T herapy</a></li>   
                                             </ul> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp8 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Bio Ener•gy Therapy - Pain Relief / Relaxation</a></li> 
+                                                <li><a href="#BioEnergy">Bio Ener•gy Therapy - Pain Relief / Relaxation</a></li> 
                                             </ul> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp9 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Body</a></li>
-                                                <li><a href="#">Face</a></li>
-                                                <li><a href="#">Neck Hump   </a></li>
-                                                <li><a href="#">Knee</a></li> 
-                                                <li><a href="#">Calf</a></li>
-                                                <li><a href="#">Get Therapy</a></li> 
-                                                <li><a href="#">VTRON CTS - Refit programme</a></li> 
+                                                <li><a href="#VTRONCTS">Body</a></li>
+                                                <li><a href="#VTRONCTS">Face</a></li>
+                                                <li><a href="#VTRONCTS">Neck Hump   </a></li>
+                                                <li><a href="#VTRONCTS">Knee</a></li> 
+                                                <li><a href="#VTRONCTS">Calf</a></li>
+                                                <li><a href="#GelThrpy">Gel Therapy</a></li> 
+                                                <li><a href="#Vtiarea">VTRON CTS - Refit programme</a></li> 
+                                            </ul> 
+                                        </ul>
+                                    </div>
+                                    <div class="Sub_Hvr_wrp10 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <ul class="weight_wrp">
+                                                <li><a href="#Bline">B-Line Treatment - Bust Enhancement / Bust Reduction / Bust Firming</a></li>
+                                                <li><a href="#Bust1">Morpho- Bust</a></li>  
+                                            </ul> 
+                                        </ul>
+                                    </div>
+                                    <div class="Sub_Hvr_wrp11 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <ul class="weight_wrp">
+                                                <li><a href="#FIGURETREATMENT">FIGURE CORRECTION</a></li>  
                                             </ul> 
                                         </ul>
                                     </div>
@@ -174,10 +191,10 @@
                             </li>
                             <!-- drop--third -->
                             <ul class="drop_down drop3">
-                                <li class="list"><a href="#">hair transplant ( men & Women )</a></li>
-                                <li class="list"><a href="#">PRP Treatment</a></li>
-                                <li class="list"><a href="#">Scalp & hair Treatment</a></li>
-                                <li class="list"><a href="#">hair Pigmentation</a></li> 
+                                <li class="list"><a href="hairtransplant.html">hair transplant <span style="font-size: 11px;">( men & Women )</span></a></li>
+                                <li class="list"><a href="prphair.html">PRP Treatment</a></li>
+                                <li class="list"><a href="scalp.html">Scalp & hair Treatment</a></li>
+                                <li class="list"><a href="hairpigment.html">hair Pigmentation</a></li> 
                             </ul>
                            <!-- end--here -->
                             <li class="Dermat">
@@ -188,12 +205,12 @@
                           </li>
                              <!-- drop--4rth -->
                              <ul class="drop_down drop4">
-                                <li class="list"><a href="#">Botox</a></li>
-                                <li class="list"><a href="#">Fillers</a></li> 
-                                <li class="list"><a href="#">Thread lift</a></li>
-                                <li class="list"><a href="#">organic peel</a></li> 
-                                <li class="list"><a href="#">Microdermabrasion</a></li> 
-                                <li class="list"><a href="#">PRP treatment (face)</a></li>
+                                <li class="list"><a href="botox.html">Botox</a></li>
+                                <li class="list"><a href="filler.html">Fillers</a></li> 
+                                <li class="list"><a href="thread.html">Thread lift</a></li>
+                                <li class="list"><a href="organic.html">organic peel</a></li> 
+                                <li class="list"><a href="microderma.html">Microdermabrasion</a></li> 
+                                <li class="list"><a href="prpface.html">PRP treatment (face)</a></li>
                             </ul>
                            <!-- end--here -->
                             <li class="permanentMakeup"><a href="javascript:void(0)" class="hvr-underline-from-left">
@@ -202,11 +219,11 @@
                             </a></li>
                               <!-- drop--5th -->
                               <ul class="drop_down drop5">
-                                <li class="list"><a href="#">Pink Lips</a></li>
-                                <li class="list"><a href="#">permanent eyebrow</a></li>
-                                <li class="list"><a href="#">permanent Eyeliner</a></li>
-                                <li class="list"><a href="#">permanent lip linear</a></li> 
-                                <li class="list"><a href="#">hair bleeding</a></li> 
+                                <li class="list"><a href="premanentmakeup.html#PinkLips">Pink Lips</a></li>
+                                <li class="list"><a href="premanentmakeup.html#Peyebrow">permanent eyebrow</a></li>
+                                <li class="list"><a href="premanentmakeup.html#PEyelashes">permanent Eyeliner</a></li>
+                                <!-- <li class="list"><a href="#">permanent lip linear</a></li>  -->
+                                <li class="list"><a href="premanentmakeup.html#PBleeding">hair bleeding</a></li> 
                             </ul>
                            <!-- end--here -->
                         </ul>
