--- a/contact.html
+++ b/contact.html
@@ -306,7 +306,7 @@
                             <label for="#">Mobile number</label>
                             <input type="number" name="number" id="" placeholder="10 digit number" autocapitalize="off">
                         </div>
-                        <div class="Fa3 Frm_cmn01">
+                        <!-- <div class="Fa3 Frm_cmn01">
                             <label for="#">category</label>
                             <select name="selectCategory" id="Category1">
                                 <option value="#">
@@ -319,8 +319,8 @@
                                     Lorem, ipsum.
                                 </option>
                             </select>
-                        </div>
-                        <div class="Fa4 Frm_cmn01">
+                        </div> -->
+                        <!-- <div class="Fa4 Frm_cmn01">
                             <label for="#">Service</label>
                             <select name="Selectservice" id="Category2">
                                 <option value="#">
@@ -333,12 +333,12 @@
                                     Lorem, ipsum.
                                 </option>
                             </select>
-                        </div>
+                        </div> -->
                         <div class="Fa5 Frm_cmn01">
                             <label for="#">Email id</label>
                             <input type="email" name="email" id="email1" placeholder="Email id" autocapitalize="off">
                         </div>
-                        <div class="Fa6 Frm_cmn01">
+                        <!-- <div class="Fa6 Frm_cmn01">
                             <label for="#">City</label>
                             <select name="city" id="Category3">
                                 <option value="#">
@@ -351,8 +351,8 @@
                                     gurugram
                                 </option>
                             </select>
-                        </div>
-                        <div class="Fa7 Frm_cmn01">
+                        </div> -->
+                        <!-- <div class="Fa7 Frm_cmn01">
                             <label for="#">Center</label>
                             <select name="Center" id="Category3">
                                 <option value="#">
@@ -365,7 +365,7 @@
                                     gurugram
                                 </option>
                             </select>
-                        </div>
+                        </div> -->
                         <div class="Fa8 Frm_cmn01">
                            <input type="submit" value="Submit">
                         </div>
