--- a/hairtransplant.html
+++ b/hairtransplant.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper
-     Scalp_Wrapper MicroDerma_Wrapper HairTransplant_Wrapper">
+       MicroDerma_Wrapper HairTransplant_Wrapper">
         <header>
             <div class="top-social-bar">
                 <div class="child-wrp">
