--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
               </div>
             </div>
-                <div class="Nav-wrp">
+             <div class="Nav-wrp">
                     <nav> 
                         <div class="logo nav_cmn">
                             <a href="index.html">
@@ -113,8 +113,8 @@
                                                     <li><a href="slimming.html#Spot">Thigh Trim Therapy</a></li> 
                                                     <li><a href="slimming.html#Spot">Chest Trim Therapy</a></li>
                                                     <li><a href="slimming.html#Spot">Side Trim Therapy</a></li> 
-                                                    <li><a href="slimming.html#Spot">Integrative Massage Therapy</a></li> 
-                                                    <li><a href="slimming.html#Spot">G-5</a></li>
+                                                    <li><a href="slimming.html#Integrative1">Integrative Massage Therapy</a></li> 
+                                                    <li><a href="slimming.html#G-5">G-5</a></li>
                                                 </ul> 
                                             </ul>
                                         </div>
@@ -225,7 +225,7 @@
                                 <ul class="drop_down drop5">
                                     <li class="list"><a href="premanentmakeup.html#PinkLips">Pink Lips</a></li>
                                     <li class="list"><a href="premanentmakeup.html#Peyebrow">permanent eyebrow</a></li>
-                                    <li class="list"><a href="premanentmakeup.html#PEyelashes">permanent Eyeliner</a></li>
+                                    <li class="list"><a href="premanentmakeup.html#PEyelashes">Permanent Eye Lashes</a></li>
                                     <!-- <li class="list"><a href="#">permanent lip linear</a></li>  -->
                                     <li class="list"><a href="premanentmakeup.html#PBleeding">hair bleeding</a></li> 
                                 </ul>
@@ -641,89 +641,90 @@
      </div>
      <!-- end --> 
 
-        <!-- foooter-->
-              <footer>
-                  <div class="container">
-                      <div class="mid-logo">
-                          <figure>
-                              <img src="image/Ftlogo.png" alt="image">
-                          </figure>
-                      </div>
-                      <div class="footer_content"  data-aos="fade-up"
-                      data-aos-easing="linear"
-                      data-aos-duration="1500">
-                          <div class="Ft01 Ft_cmn01">
-                              <h2>QUICK LINKS</h2>
-                              <ul>
-                                 <li><a href = "lasertreatment.html"class="hvr-underline-from-left" >Laser </a></li> 
-                                 <li><a href = "botox.html"class="hvr-underline-from-left" >Botox </a></li>
-                                 <li><a href = "filler.html"class="hvr-underline-from-left" >Fillers</a></li>
-                                 <li><a href = "thread.html"class="hvr-underline-from-left" >Thread lift</a></li>
-                                 <li><a href = "slimming.html"class="hvr-underline-from-left" >Tummy tucks</a></li>
-                                 <li><a href = "contact.html"class="hvr-underline-from-left" >Contact us</a></li>
-                                 <li><a href = "privacy.html"class="hvr-underline-from-left" >Privacy policy</a></li>
-                                 <li><a href = "terms.html"class="hvr-underline-from-left" >Terms & condition</a></li>
-                              </ul>
-                          </div>
-                          <div class="Ft02 Ft_cmn01">
-                            <h2>SERVICES </h2>
+    <!-- foooter-->
+            <footer>
+                <div class="container">
+                    <div class="mid-logo">
+                        <figure>
+                            <img src="image/Ftlogo.png" alt="image">
+                        </figure>
+                    </div>
+                    <div class="footer_content"  data-aos="fade-up"
+                    data-aos-easing="linear"
+                    data-aos-duration="1500">
+                        <div class="Ft01 Ft_cmn01">
+                            <h2>QUICK LINKS</h2>
                             <ul>
-                               <li><a href = "skintreatment.html"class="hvr-underline-from-left" >Beauty  </a></li> 
-                               <li><a href = "slimming.html"class="hvr-underline-from-left" >Slimming  </a></li>
-                               <li><a href = "lasertreatment.html"class="hvr-underline-from-left" >Laser </a></li>
-                               <li><a href = "premanentmakeup.html"class="hvr-underline-from-left" >Permanent </a></li>
-                               <li><a href = "filler.html"class="hvr-underline-from-left" >Dermat </a></li>
-                               <li><a href = "slimming.html"class="hvr-underline-from-left" >Figure Correction  </a></li>
-                               <li><a href = "hairlaser.html"class="hvr-underline-from-left" >Hair Treatments </a></li>
+                                <li><a href = "lasertreatment.html"class="hvr-underline-from-left" >Laser </a></li> 
+                                <li><a href = "botox.html"class="hvr-underline-from-left" >Botox </a></li>
+                                <li><a href = "filler.html"class="hvr-underline-from-left" >Fillers</a></li>
+                                <li><a href = "thread.html"class="hvr-underline-from-left" >Thread lift</a></li>
+                                <li><a href = "slimming.html"class="hvr-underline-from-left" >Tummy tucks</a></li>
+                                <li><a href = "contact.html"class="hvr-underline-from-left" >Contact us</a></li>
+                                <li><a href = "privacy.html"class="hvr-underline-from-left" >Privacy policy</a></li>
+                                <li><a href = "terms.html"class="hvr-underline-from-left" >Terms & condition</a></li>
                             </ul>
                         </div>
-                        <div class="Ft03 Ft_cmn01">
-                            <h2>SKIN CARE</h2>
-                            <ul>
-                               <li><a href = "#"class="hvr-underline-from-left" >Anti-aging</a></li> 
-                               <li><a href = "hairpigment.html"class="hvr-underline-from-left" >Skin Pigmentation  </a></li>
-                               <li><a href = "skintreatment.html"class="hvr-underline-from-left" >Skin Brightening </a></li>
-                               <li><a href = "cosmo.html"class="hvr-underline-from-left" >Acne Treatment </a></li>
-                               <li><a href = "#"class="hvr-underline-from-left" >Under Eye Dark Circle </a></li>
-                               <li><a href = "#"class="hvr-underline-from-left" >Skin Rejuvenation  </a></li>
-                               <li><a href = "prpface.html"class="hvr-underline-from-left" >Advanced Facial</a></li>
-                               <li><a href = "#"class="hvr-underline-from-left" >Dull Skin Treatment</a></li>
-                            </ul>
+                        <div class="Ft02 Ft_cmn01">
+                        <h2>SERVICES </h2>
+                        <ul>
+                            <li><a href = "skintreatment.html"class="hvr-underline-from-left" >Beauty  </a></li> 
+                            <li><a href = "slimming.html"class="hvr-underline-from-left" >Slimming  </a></li>
+                            <li><a href = "lasertreatment.html"class="hvr-underline-from-left" >Laser </a></li>
+                            <li><a href = "premanentmakeup.html"class="hvr-underline-from-left" >Permanent </a></li>
+                            <li><a href = "filler.html"class="hvr-underline-from-left" >Dermat </a></li>
+                            <li><a href = "slimming.html"class="hvr-underline-from-left" >Figure Correction  </a></li>
+                            <li><a href = "hairlaser.html"class="hvr-underline-from-left" >Hair Treatments </a></li>
+                        </ul>
+                    </div>
+                    <div class="Ft03 Ft_cmn01">
+                        <h2>SKIN CARE</h2>
+                        <ul>
+                            <li><a href = "#"class="hvr-underline-from-left" >Anti-aging</a></li> 
+                            <li><a href = "hairpigment.html"class="hvr-underline-from-left" >Skin Pigmentation  </a></li>
+                            <li><a href = "skintreatment.html"class="hvr-underline-from-left" >Skin Brightening </a></li>
+                            <li><a href = "cosmo.html"class="hvr-underline-from-left" >Acne Treatment </a></li>
+                            <li><a href = "#"class="hvr-underline-from-left" >Under Eye Dark Circle </a></li>
+                            <li><a href = "#"class="hvr-underline-from-left" >Skin Rejuvenation  </a></li>
+                            <li><a href = "prpface.html"class="hvr-underline-from-left" >Advanced Facial</a></li>
+                            <li><a href = "#"class="hvr-underline-from-left" >Dull Skin Treatment</a></li>
+                        </ul>
+                    </div>
+                    <div class="Ft04 Ft_cmn01">
+                        <h2>CONTACT US</h2>
+                        <ul>
+                            <li> <p><i class="fas fa-phone-alt"></i> +91 7673686578</p></li>
+                            <li> <p><i class="fas fa-envelope"></i>info.cossetworld@gmail.com</p></li>
+                        </ul>
+                        <ul class="social_wrp">
+                            <li><i class="fab fa-facebook"></i></li> 
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-instagram"></i></li>
+                            <li><i class="fab fa-youtube"></i></li>   
+                        </ul>
+                        <div class="subscribe">
+                            <h3>Subscribe News Letter</h3>
+                            <label for="#">
+                                <input type="email" name="email2" id="email" placeholder="Email Address" autocapitalize="off">
+                            </label>
+                            <label for="#">
+                                <input type="submit" id="Submit2" value="Submit">
+                            </label>
                         </div>
-                        <div class="Ft04 Ft_cmn01">
-                            <h2>CONTACT US</h2>
-                            <ul>
-                                <li> <p><i class="fas fa-phone-alt"></i> +91 7673686578</p></li>
-                                <li> <p><i class="fas fa-envelope"></i>info.cossetworld@gmail.com</p></li>
-                            </ul>
-                            <ul class="social_wrp">
-                                <li><i class="fab fa-facebook"></i></li> 
-                                <li><i class="fab fa-twitter"></i></li>
-                                <li><i class="fab fa-instagram"></i></li>
-                                <li><i class="fab fa-youtube"></i></li>   
-                            </ul>
-                            <div class="subscribe">
-                                <h3>Subscribe News Letter</h3>
-                                <label for="#">
-                                   <input type="email" name="email2" id="email" placeholder="Email Address" autocapitalize="off">
-                                </label>
-                                <label for="#">
-                                    <input type="submit" id="Submit2" value="Submit">
-                                </label>
-                            </div>
+                    </div>
+                    </div>
+                </div>
+                <div class="copyright_wrp">
+                    <div class="container">
+                        <div class="copy_content">
+                            <p>Copyright ©2021 Cosset World. All Rights Reserved. </p>
+                            <p> | Terms & Conditions | Disclaimer</p>
                         </div>
-                      </div>
-                  </div>
-                  <div class="copyright_wrp">
-                      <div class="container">
-                          <div class="copy_content">
-                              <p>Copyright ©2021 Cosset World. All Rights Reserved. </p>
-                              <p> | Terms & Conditions | Disclaimer</p>
-                          </div>
-                      </div>
-                  </div>
-              </footer>
-        <!-- end----footer -->
+                    </div>
+                </div>
+            </footer>
+    <!-- end----footer -->
+
     </main>
 
 
