--- a/microderma.html
+++ b/microderma.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper Scalp_Wrapper MicroDerma_Wrapper">
+    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper  MicroDerma_Wrapper">
         <header>
             <div class="top-social-bar">
                 <div class="child-wrp">
