--- a/premanentmakeup.html
+++ b/premanentmakeup.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper
-    Scalp_Wrapper MicroDerma_Wrapper HairTransplant_Wrapper permanentMakeup_Wrapper">
+     MicroDerma_Wrapper   permanentMakeup_Wrapper">
         <header>
             <div class="top-social-bar">
                 <div class="child-wrp">
@@ -223,7 +223,7 @@
                             <ul class="drop_down drop5">
                                 <li class="list"><a href="premanentmakeup.html#PinkLips">Pink Lips</a></li>
                                 <li class="list"><a href="premanentmakeup.html#Peyebrow">permanent eyebrow</a></li>
-                                <li class="list"><a href="premanentmakeup.html#PEyelashes">permanent Eyeliner</a></li>
+                                <li class="list"><a href="premanentmakeup.html#PEyelashes">Permanent Eye Lashes</a></li>
                                 <!-- <li class="list"><a href="#">permanent lip linear</a></li>  -->
                                 <li class="list"><a href="premanentmakeup.html#PBleeding">hair bleeding</a></li> 
                             </ul>
