--- a/contact.html
+++ b/contact.html
@@ -222,7 +222,7 @@
                             <ul class="drop_down drop5">
                                 <li class="list"><a href="premanentmakeup.html#PinkLips">Pink Lips</a></li>
                                 <li class="list"><a href="premanentmakeup.html#Peyebrow">permanent eyebrow</a></li>
-                                <li class="list"><a href="premanentmakeup.html#PEyelashes">permanent Eyeliner</a></li>
+                                <li class="list"><a href="premanentmakeup.html#PEyelashes">Permanent Eye Lashes</a></li>
                                 <!-- <li class="list"><a href="#">permanent lip linear</a></li>  -->
                                 <li class="list"><a href="premanentmakeup.html#PBleeding">hair bleeding</a></li> 
                             </ul>
