--- a/hairlaser.html
+++ b/hairlaser.html
@@ -15,8 +15,8 @@
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper
-     Scalp_Wrapper MicroDerma_Wrapper Cosmo_Wrapper HairLaser-Wrapper">
+    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper 
+     MicroDerma_Wrapper Cosmo_Wrapper HairLaser-Wrapper">
         <header>
             <div class="top-social-bar">
                 <div class="child-wrp">
@@ -223,7 +223,7 @@
                               <ul class="drop_down drop5">
                                 <li class="list"><a href="premanentmakeup.html#PinkLips">Pink Lips</a></li>
                                 <li class="list"><a href="premanentmakeup.html#Peyebrow">permanent eyebrow</a></li>
-                                <li class="list"><a href="premanentmakeup.html#PEyelashes">permanent Eyeliner</a></li>
+                                <li class="list"><a href="premanentmakeup.html#PEyelashes">Permanent Eye Lashes</a></li>
                                 <!-- <li class="list"><a href="#">permanent lip linear</a></li>  -->
                                 <li class="list"><a href="premanentmakeup.html#PBleeding">hair bleeding</a></li> 
                             </ul>
