--- a/scalp.html
+++ b/scalp.html
@@ -47,14 +47,14 @@
                                 Skin
                                 <i class="fas fa-sort-down"></i>
                             </a></li>
-                                <!--drop--1st-->
-                                <ul class="drop_down drop1">
+                                 <!--drop--1st-->
+                                 <ul class="drop_down drop1">
                                     <li class="list"><a href="skintreatment.html">Skin Treatment</a></li>
                                     <li class="list"><a href="lasertreatment.html">laser Treatment</a></li>
                                     <li class="list"><a href="bodytreatment.html">body Treatment</a></li>
                                     <li class="list"><a href="cosmo.html">cosmedermat Treatments</a></li> 
                                 </ul>
-                            <!-- end--here -->
+                               <!-- end--here -->
                             <li class="slimming">
                                 <a href="javascript:void(0)" class="hvr-underline-from-left">
                                 Slimming
@@ -195,17 +195,16 @@
                                 <li class="list"><a href="prphair.html">PRP Treatment</a></li>
                                 <li class="list"><a href="scalp.html">Scalp & hair Treatment</a></li>
                                 <li class="list"><a href="hairpigment.html">hair Pigmentation</a></li> 
-                                <li class="list"><a href="hairlaser.html">hair laser removal</a></li>  
                             </ul>
-                        <!-- end--here -->
+                           <!-- end--here -->
                             <li class="Dermat">
                                 <a href="javascript:void(0)" class="hvr-underline-from-left">
                                 Dermat 
                                 <i class="fas fa-sort-down"></i>
                             </a>
-                        </li>
-                            <!-- drop--4rth -->
-                            <ul class="drop_down drop4">
+                          </li>
+                             <!-- drop--4rth -->
+                             <ul class="drop_down drop4">
                                 <li class="list"><a href="botox.html">Botox</a></li>
                                 <li class="list"><a href="filler.html">Fillers</a></li> 
                                 <li class="list"><a href="thread.html">Thread lift</a></li>
@@ -213,20 +212,20 @@
                                 <li class="list"><a href="microderma.html">Microdermabrasion</a></li> 
                                 <li class="list"><a href="prpface.html">PRP treatment (face)</a></li>
                             </ul>
-                        <!-- end--here -->
+                           <!-- end--here -->
                             <li class="permanentMakeup"><a href="javascript:void(0)" class="hvr-underline-from-left">
                                 permanent makeup 
                                 <i class="fas fa-sort-down"></i>
                             </a></li>
-                            <!-- drop--5th -->
-                            <ul class="drop_down drop5">
+                              <!-- drop--5th -->
+                              <ul class="drop_down drop5">
                                 <li class="list"><a href="premanentmakeup.html#PinkLips">Pink Lips</a></li>
                                 <li class="list"><a href="premanentmakeup.html#Peyebrow">permanent eyebrow</a></li>
-                                <li class="list"><a href="premanentmakeup.html#PEyelashes">permanent Eyeliner</a></li>
+                                <li class="list"><a href="premanentmakeup.html#PEyelashes">Permanent Eye Lashes</a></li>
                                 <!-- <li class="list"><a href="#">permanent lip linear</a></li>  -->
                                 <li class="list"><a href="premanentmakeup.html#PBleeding">hair bleeding</a></li> 
                             </ul>
-                        <!-- end--here -->
+                           <!-- end--here -->
                         </ul>
                     </div>
                     <div class="main-bar">
@@ -235,7 +234,7 @@
                         <div class="c"></div>
                     </div>
                 </nav>
-        </div>
+           </div>
     </header> 
         <!-- banner -->
         <section class="Slimming-Banner Filler-Banner Organic-Banner Thread-Banner Prp-Banner Scalp-Banner"> 
@@ -555,7 +554,6 @@
     </div>
 </footer>
 <!-- end----footer -->
-
     </main>
 
 
