--- a/slimming.html
+++ b/slimming.html
@@ -110,8 +110,8 @@
                                                 <li><a href="slimming.html#Spot">Thigh Trim Therapy</a></li> 
                                                 <li><a href="slimming.html#Spot">Chest Trim Therapy</a></li>
                                                 <li><a href="slimming.html#Spot">Side Trim Therapy</a></li> 
-                                                <li><a href="slimming.html#Spot">Integrative Massage Therapy</a></li> 
-                                                <li><a href="slimming.html#Spot">G-5</a></li>
+                                                <li><a href="slimming.html#Integrative1">Integrative Massage Therapy</a></li> 
+                                                <li><a href="slimming.html#G-5">G-5</a></li>
                                             </ul> 
                                         </ul>
                                     </div>
@@ -222,7 +222,7 @@
                             <ul class="drop_down drop5">
                                 <li class="list"><a href="premanentmakeup.html#PinkLips">Pink Lips</a></li>
                                 <li class="list"><a href="premanentmakeup.html#Peyebrow">permanent eyebrow</a></li>
-                                <li class="list"><a href="premanentmakeup.html#PEyelashes">permanent Eyeliner</a></li>
+                                <li class="list"><a href="premanentmakeup.html#PEyelashes">Permanent Eye Lashes</a></li>
                                 <!-- <li class="list"><a href="#">permanent lip linear</a></li>  -->
                                 <li class="list"><a href="premanentmakeup.html#PBleeding">hair bleeding</a></li> 
                             </ul>
@@ -517,7 +517,7 @@
              </div>
           <!-- end--here -->
         <!-- Integrative-Therapy-->
-          <div class="Weight-Loss Lipofit Integrative-Therapy"> 
+          <div class="Weight-Loss Lipofit Integrative-Therapy" id="Integrative1"> 
                 <div class="Weight-content">
                     <div class="W-left">
                         <figure>
@@ -534,7 +534,7 @@
          </div>
         <!-- end---here --> 
         <!-- G-5 --> 
-            <div class="Weight-Loss G-5"> 
+            <div class="Weight-Loss G-5" id="G-5"> 
                 <div class="Weight-content">
                     <div class="W-left">
                         <figure>
@@ -568,7 +568,7 @@ data-aos-duration="1500">
            <h4><i class="fas fa-minus"></i></h3>
        </div>
        <div class="Weight-Content-wrp Accro5">
-        <div class="Weight-Loss Body-Farming" id="BFarming"> 
+        <div class="Weight-Loss Body-Farming Lipofit " id="BFarming"> 
                 <div class="Weight-content">
                    <div class="W-left">
                       <figure>
@@ -744,7 +744,7 @@ data-aos-duration="1500">
            <h4><i class="fas fa-minus"></i></h3>
        </div>
        <div class="Weight-Content-wrp Accro7">
-        <div class="Weight-Loss Body-Farming" id="SlimmingMuscles"> 
+        <div class="Weight-Loss Body-Farming " id="SlimmingMuscles"> 
                 <div class="Weight-content">
                    <div class="W-left">
                       <figure>
@@ -809,7 +809,7 @@ data-aos-duration="1500">
            <h4><i class="fas fa-minus"></i></h3>
        </div>
        <div class="Weight-Content-wrp Accro8">
-        <div class="Weight-Loss Body-Farming" id="BioEnergy"> 
+        <div class="Weight-Loss Body-Farming Lipofit " id="BioEnergy"> 
                 <div class="Weight-content">
                    <div class="W-left">
                       <figure>
